force-app/main/default/objects/JobOffer__c/JobOffer__c.object-meta.xml
<CustomObject>
    <label>求人</label>
    <nameField>
        <label>求人名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>