force-app/main/default/objects/JobOffer__c/fields/Bonus__c.field-meta.xml
<CustomField>
    <fullName>Bonus__c</fullName>
    <label>賞与</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>