force-app/main/default/objects/JobOffer__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>求人コード</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>