force-app/main/default/objects/JobOffer__c/fields/EmploymentStatus__c.field-meta.xml
<CustomField>
    <fullName>EmploymentStatus__c</fullName>
    <label>募集雇用形態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>正社員</fullName>
            </value>
            <value>
                <fullName>パート</fullName>
            </value>
            <value>
                <fullName>アルバイト</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>