force-app/main/default/objects/JobOffer__c/fields/IsHiring__c.field-meta.xml
<CustomField>
    <fullName>IsHiring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>募集有無</label>
    <type>Checkbox</type>
</CustomField>