force-app/main/default/objects/JobOffer__c/fields/JobType__c.field-meta.xml
<CustomField>
    <fullName>JobType__c</fullName>
    <label>募集職種</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>職種A</fullName>
            </value>
            <value>
                <fullName>職種B</fullName>
            </value>
            <value>
                <fullName>職種C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>