force-app/main/default/objects/JobOffer__c/fields/NegativePoint__c.field-meta.xml
<CustomField>
    <fullName>NegativePoint__c</fullName>
    <label>ネガティブポイント</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>