force-app/main/default/objects/JobOffer__c/fields/RecommendedCondition__c.field-meta.xml
<CustomField>
    <fullName>RecommendedCondition__c</fullName>
    <label>おすすめ条件</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未経験歓迎</fullName>
            </value>
            <value>
                <fullName>新卒歓迎</fullName>
            </value>
            <value>
                <fullName>家賃補助有</fullName>
            </value>
            <value>
                <fullName>高給与</fullName>
            </value>
            <value>
                <fullName>年間休日120日以上</fullName>
            </value>
            <value>
                <fullName>残業時間少</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>