force-app/main/default/objects/JobOffer__c/fields/RecommendedPoint__c.field-meta.xml
<CustomField>
    <fullName>RecommendedPoint__c</fullName>
    <label>おすすめポイント</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>