force-app/main/default/objects/JobOffer__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>給与</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>