force-app/main/default/objects/JobOffer__c/fields/WorkTime__c.field-meta.xml
<CustomField>
    <fullName>WorkTime__c</fullName>
    <label>就業時間</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>